# pypitzer

./: .gitignore  LICENSE  pypitzer_solids.json  pyproject.toml  readme.md  requirements.txt  test.py
conda-recipe/: meta.yaml
src/Pitzer/: methods.py  models.py
src/database/: convert_reaction_to_sqlite.py  convert_spencer_chemical_potential_to_json.py  convert_spencer_to_json.py  create_sqlite.py  db_query.py  insert_binary.py  insert_reaction.py  insert_ternary.py  marion_binary.py  marion_ternary.py  parse_dissociation.py  pypitzer.sqlite  pypitzer_parameter.json  pypitzer_potential.json  pypitzer_reaction.json  pypitzer_solids.json  solid_data.py  spencer_revised_binary.py  spencer_revised_chemical_potential.json  spencer_revised_chemical_potential.py  spencer_revised_parameters.json  spencer_revised_ternary.py
src/public/: low_level.py
src/pypitzer/Pitzer/: methods.py  models.py
src/pypitzer/database/: db_query.py  pypitzer.sqlite
