[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypitzer"
version = "0.0.1"
authors = [
  { name="Yiping Liu", email="yiping.liu@rwth-aachen.de" },
]
description = "A library for thermodynamic modeling with the Pitzer model and its application in quantification of fluid inclusion data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypitzer/pypitzer"
"Bug Tracker" = "https://github.com/pypitzer/pypitzer/issues"