[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[project]
name = "pypitzer"
version = "1.1.5"
authors = [
  { name = "Yiping Liu", email = "yiping.liu@rwth-aachen.de" },
]
description = "A library for thermodynamic modeling with the Pitzer model and its application in quantification of fluid inclusion data."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["thermodynamics", "pitzer", "geochemistry", "fluid-inclusions"]

[project.urls]
Homepage = "https://github.com/pypitzer/pypitzer"
"Bug Tracker" = "https://github.com/pypitzer/pypitzer/issues"
